--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -26,7 +26,12 @@
 
 .component-index-sort {
   background-color: $white-0;
-  height: $spacing-08;
+  height: $spacing-09;
+}
+
+.component-index-sort .bx--list-box__field {
+  background-color: $white-0;
+  height: $spacing-09;
 }
 
 //----------------------------------------------------------------------------
@@ -48,7 +53,8 @@
 .component-index-item__image {
   display: none;
 
-  @include carbon--breakpoint(md) {  //672  4:3
+  @include carbon--breakpoint(md) {
+    //672  4:3
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,11 +63,13 @@
     width: 14.875rem;
   }
 
-  @include carbon--breakpoint(lg) { //1056  1:1
+  @include carbon--breakpoint(lg) {
+    //1056  1:1
     width: 11.25rem;
   }
 
-  @include carbon--breakpoint(xlg) { //1312  4:3
+  @include carbon--breakpoint(xlg) {
+    //1312  4:3
     width: 14.875rem;
   }
 }
@@ -187,11 +195,11 @@
 }
 
 // Filter fieldset & label
-.component-index-filter__fieldset  {
+.component-index-filter__fieldset {
   padding-bottom: $spacing-05;
   margin-top: $spacing-05;
 }
-.component-index-filter__label  {
+.component-index-filter__label {
   border-top: 1px solid $ui-03;
   padding-top: $spacing-05;
   padding-bottom: $spacing-03;
@@ -200,10 +208,10 @@
   letter-spacing: 0.16px;
   color: $carbon--gray-70;
   font-weight: 400;
-  vertical-align: initial
+  vertical-align: initial;
 }
 
-// Filter option 
+// Filter option
 .component-index-filter__option {
   padding-bottom: $spacing-05;
 }
