update events page styling

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -2,13 +2,13 @@
 // Events page
 //---------------------------------------
 .events-list {
-  padding-top: $spacing-09;
+  padding-top: $layout-05;
 }
 
 .events-list:before {
   content: '';
   display: block;
-  background: $ui-04;
+  background: $ui-03;
   height: 1px;
   width: calc(100% - 2rem);
   margin: -$spacing-07 0 0 $spacing-05;
@@ -16,10 +16,11 @@
 
 .events-list h2 {
   margin-top: 0;
+  font-weight: 600;
 }
 
-.events-list h3 {
-  margin-top: $spacing-03;
+.events-list h2 span {
+  font-weight: 400;
 }
 
 div[class*='CardGroup-module'] {
