--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -1,9 +1,7 @@
 // MAIN CONTAINER
 .color-palette-wrapper {
-  @include carbon--breakpoint-down("md") {
-    margin-left: -1rem;
-    margin-right: -1rem;
-  }
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
 // DROPDOWN
 .palette-controls {
@@ -14,11 +12,11 @@
   width: 66.66%;
   margin-bottom: 1px;
 
-  @include carbon--breakpoint-down("md") {
+  @include carbon--breakpoint-down('md') {
     width: 100%;
   }
 
-  @include carbon--breakpoint-down("sm") {
+  @include carbon--breakpoint-down('sm') {
     grid-template-columns: 1fr;
   }
 }
@@ -84,11 +82,11 @@
   column-gap: 1px;
   row-gap: 1px;
 
-  @include carbon--breakpoint-down("lg") {
+  @include carbon--breakpoint-down('lg') {
     grid-template-columns: 1fr 1fr;
   }
 
-  @include carbon--breakpoint-down("md") {
+  @include carbon--breakpoint-down('md') {
     grid-template-columns: 1fr;
   }
 }
@@ -97,7 +95,7 @@
   width: 66.66%;
   grid-template-columns: 1fr 1fr;
 
-  @include carbon--breakpoint-down("md") {
+  @include carbon--breakpoint-down('md') {
     width: 100%;
     grid-template-columns: 1fr;
   }
@@ -106,7 +104,7 @@
 // COLOR
 .color-palette-color {
   height: 3rem;
-  @include carbon--type-style("code-02");
+  @include carbon--type-style('code-02');
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -163,27 +161,27 @@
 // responsive group option dividers
 .group-container + .group-container .group-option::before {
   position: absolute;
-  content: "";
+  content: '';
   width: 1px;
   height: calc(100% + 1px);
   top: -1px;
   left: -1px;
   background-color: $ui-03;
 
-  @include carbon--breakpoint-down("md") {
+  @include carbon--breakpoint-down('md') {
     display: none; //all indiv rows, so don't need a left "border"
   }
 }
 
 .group-container + .group-container:nth-child(4) .group-option::before {
-  @include carbon--breakpoint-up("lg") {
+  @include carbon--breakpoint-up('lg') {
     display: none; //4 starts a new row, so it doesn't need a left "border"
   }
 }
 
 .group-container + .group-container:nth-child(3) .group-option::before,
 .group-container + .group-container:nth-child(5) .group-option::before {
-  @include carbon--breakpoint-between("md", "lg") {
+  @include carbon--breakpoint-between('md', 'lg') {
     display: none; // 3/5 start a new row, so it don't need a left "border"
   }
 }
@@ -202,11 +200,11 @@
   grid-template-columns: 1fr 1fr;
   width: 66.66%;
 
-  @include carbon--breakpoint-down("lg") {
+  @include carbon--breakpoint-down('lg') {
     width: 100%;
   }
 
-  @include carbon--breakpoint-down("md") {
+  @include carbon--breakpoint-down('md') {
     grid-template-columns: 1fr;
   }
 }
@@ -225,14 +223,14 @@
   .palettes-container:nth-child(even)
   .group-option::before {
   position: absolute;
-  content: "";
+  content: '';
   width: 1px;
   height: calc(100% + 1px);
   top: -1px;
   left: -1px;
   background-color: $ui-03;
 
-  @include carbon--breakpoint-down("md") {
+  @include carbon--breakpoint-down('md') {
     display: none; //all indiv rows, so don't need a left "border"
   }
 }
