Update events -> meetups

--- a/src/styles/meetups.scss
+++ b/src/styles/meetups.scss
@@ -1,11 +1,11 @@
 //---------------------------------------
-// Events page
+// meetups page
 //---------------------------------------
-.events-list {
+.meetups-list {
   padding-top: $layout-05;
 }
 
-.events-list:before {
+.meetups-list:before {
   content: '';
   display: block;
   background: $ui-04;
@@ -14,13 +14,13 @@
   margin: -$spacing-07 0 0 $spacing-05;
 }
 
-.events-list h2 {
+.meetups-list h2 {
   margin-top: 0;
   font-weight: 600;
   width: 100%;
 }
 
-.events-list h2 span {
+.meetups-list h2 span {
   font-weight: 400;
   display: block;
 }
