fix style sheet import

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,7 @@
 @import 'grid-demo';
 @import 'structured-list';
 @import 'plex-serif';
-@import 'events';
+@import 'meetups';
 
 @import 'src/components/ColorBlock/color-block.scss';
 @import 'src/components/ColorGrid/color-grid.scss';
