fix: sequential palette column divider

--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -215,8 +215,10 @@
   row-gap: 0;
 }
 
-.sequential:last-of-type {
-  border-left: 1px solid $ui-02;
+.sequential:nth-child(even) {
+  @include carbon--breakpoint('md') {
+    border-left: 1px solid $ui-02;
+  }
 }
 
 .sequential-container
@@ -225,7 +227,7 @@
   position: absolute;
   content: '';
   width: 1px;
-  height: calc(100% + 1px);
+  height: calc(100%);
   top: -1px;
   left: -1px;
   background-color: $ui-03;
