--- a/src/components/ColorPalette/_color-palette.scss
+++ b/src/components/ColorPalette/_color-palette.scss
@@ -10,7 +10,7 @@
   column-gap: 1px;
   row-gap: 1px;
   width: 66.66%;
-  margin-bottom: 1px;
+  border-bottom: 1px solid transparent;
 
   @include carbon--breakpoint-down('md') {
     width: 100%;
@@ -163,8 +163,8 @@
   position: absolute;
   content: '';
   width: 1px;
-  height: calc(100% + 1px);
-  top: -1px;
+  height: 100%;
+  top: 0;
   left: -1px;
   background-color: $ui-03;
 
@@ -215,20 +215,22 @@
   row-gap: 0;
 }
 
+// column divider
 .sequential:nth-child(even) {
   @include carbon--breakpoint('md') {
     border-left: 1px solid $ui-02;
   }
 }
 
+// group option divider
 .sequential-container
   .palettes-container:nth-child(even)
   .group-option::before {
   position: absolute;
   content: '';
   width: 1px;
-  height: calc(100%);
-  top: -1px;
+  height: 100%;
+  top: 0;
   left: -1px;
   background-color: $ui-03;
 
