fix: motion tab columns spacing

--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -76,3 +76,17 @@
   margin-top: $spacing-04;
   @include carbon--type-style('heading-01');
 }
+
+//---------------------------------------
+// Tabs
+//---------------------------------------
+
+section[role='tabpanel'] [class*='--col'] + [class*='--col'] {
+  @include carbon--breakpoint-down('md') {
+    margin-top: 1rem;
+  }
+}
+
+.tab--columns_label {
+  margin-bottom: 0.5rem;
+}
