fix(banner): update copy, fix mobile render

--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -61,8 +61,15 @@
   background: $ibm-color__cyan-80;
 }
 
-.banner-close {
+.banner-close,
+.banner-close:hover {
   background: $ibm-color__cyan-80;
+}
+
+.banner a > span {
+  @media all and (max-width: 340px) {
+    display: none;
+  }
 }
 
 .banner a {
