--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -161,7 +161,7 @@
 // Component Index Not Found
 //----------------------------------------------------------------------------
 .component-index-not-found {
-  padding-right: $spacing-02;
+  padding-right: 5.5rem;
 }
 
 .component-index-not-found__title {
