--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -66,9 +66,13 @@
   background: $ibm-color__cyan-80;
 }
 
-.banner a > span {
-  @media all and (max-width: 340px) {
-    display: none;
+.full-name {
+  display: none;
+}
+
+@include carbon--breakpoint('md') {
+  .full-name {
+    display: inline;
   }
 }
 
