feat(component-index): 1655-component-index-no-results (#1662)
* feat(component-index): 1655-component-index-no-results

* Update src/components/ComponentIndexPage/index.js

Co-authored-by: Josh Black <josh@josh.black>

* fix - website to docs

* added spacing

Co-authored-by: andrea.cardonaibm.com <andrea.cardonaibm.com>
Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -160,6 +160,10 @@
 //----------------------------------------------------------------------------
 // Component Index Not Found
 //----------------------------------------------------------------------------
+.component-index-not-found {
+  padding-right: 5.5rem;
+}
+
 .component-index-not-found__title {
   @include carbon--type-style('productive-heading-04');
 
@@ -188,6 +192,7 @@
   margin-top: 12.5rem;
   padding-left: $spacing-07;
 }
+
 // Header
 .component-index-filter__header {
   @include carbon--type-style('heading-01');
@@ -199,6 +204,7 @@
   padding-bottom: $spacing-05;
   margin-top: $spacing-05;
 }
+
 .component-index-filter__label {
   border-top: 1px solid $ui-03;
   padding-top: $spacing-05;
