fix(ComponentDemo): add padding to align dropdown labels

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -256,6 +256,10 @@ fieldset.form-group:last-of-type {
   [class*='--list-box--light'][class*='--list-box--expanded'] {
     border-bottom-width: 1px;
   }
+
+  [class*='--label'] {
+    margin-left: 1rem;
+  }
 }
 
 .dropdownRow .variantDropdown {
