fix(Component Index): move legends as direct descendants to fieldsets

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -197,12 +197,13 @@
 .component-index-filter__header {
   @include carbon--type-style('heading-01');
   color: $text-01;
+  margin-bottom: $spacing-05;
 }
 
 // Filter fieldset & label
 .component-index-filter__fieldset {
   padding-bottom: $spacing-05;
-  margin-top: $spacing-05;
+  margin-top: 0;
 }
 
 .component-index-filter__label {
