--- a/src/components/ColorTokenTable/color-token-table.scss
+++ b/src/components/ColorTokenTable/color-token-table.scss
@@ -3,12 +3,23 @@
   flex-direction: column;
 }
 
+.color-token-table .page-h3:first-of-type {
+  margin-top: 3rem;
+}
+
 .color-token-table__theme-switcher {
   position: relative;
   width: 100%;
-  height: rem(48px);
-  margin-bottom: 1.75rem;
+  height: 3rem;
   background: $ui-02;
+
+  @include carbon--breakpoint-down('lg') {
+    margin-left: 0;
+  }
+  @include carbon--breakpoint-down('md') {
+    max-width: calc(100% - 16px);
+    margin-left: 0.5rem;
+  }
 }
 
 .color-token-table__theme-switcher::before {
@@ -17,37 +28,13 @@
   position: absolute;
   top: -16px;
   left: 0;
-  width: 110%;
+  width: 100%;
   height: 64px;
   background: $ui-01;
 }
 
-.color-token-table__theme-switcher--sticky {
-  position: fixed;
-  top: 112px;
-  z-index: 10;
-  max-width: 1184px;
-  box-shadow: 0px 2px 6px 0px rgba($carbon--black-100, 0.2);
-
-  @media all and (max-width: 1580px) {
-    max-width: 72.7%;
-  }
-  @media all and (max-width: 1380px) {
-    max-width: 72.65%;
-  }
-  @media all and (max-width: 1280px) {
-    max-width: 72.4%;
-  }
-  @media all and (max-width: 1055px) {
-    max-width: calc(100% - 32px);
-  }
-  @media all and (max-width: 671px) {
-    max-width: 100%;
-  }
-}
-
-h3.page-h3--sticky {
-  margin-top: 100px !important;
+.color-token-table__theme-switcher--stuck {
+  box-shadow: 0px 2px 6px 0px rgba($carbon--black-100, 0.2); //adds box shadow once it hits scrolling content
 }
 
 .color-token-table__theme-switcher
