feat: remove link from profile component

--- a/src/components/Profile/profile.module.scss
+++ b/src/components/Profile/profile.module.scss
@@ -20,25 +20,11 @@
   }
 }
 
-.anchorContainer {
-  text-decoration: none;
-}
-
-.cardContainer:hover {
-  background-color: $carbon--gray-20;
-  transition: all $duration--moderate-01 $carbon--standard-easing;
-}
-
-.cardContainer:active {
-  border: 2px solid $carbon--blue-60;
-  transition: all $duration--moderate-01 $carbon--standard-easing;
-}
-
 .cardContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: $carbon--gray-10;
+  background: $carbon--white-0;
 }
 
 .contentContainer {
@@ -57,8 +43,7 @@
   padding-top: 1rem;
 }
 
-.titleStyle,
-.buStyle {
+.titleStyle {
   @include carbon--type-style('label-01', true);
   color: $carbon--gray-80;
   padding-left: 1rem;
