add spacing tokens

--- a/src/components/Profile/profile.module.scss
+++ b/src/components/Profile/profile.module.scss
@@ -39,13 +39,13 @@
 .nameStyle {
   @include carbon--type-style('body-short-01', true);
   color: $carbon--black-100;
-  padding-left: 1rem;
-  padding-top: 1rem;
+  padding-left: $spacing-05;
+  padding-top: $spacing-05;
 }
 
 .titleStyle {
   @include carbon--type-style('label-01', true);
   color: $carbon--gray-80;
-  padding-left: 1rem;
+  padding-left: $spacing-05;
   width: 95%;
 }
