update profile component name style to heading-01

--- a/src/components/Profile/profile.module.scss
+++ b/src/components/Profile/profile.module.scss
@@ -37,7 +37,7 @@
 }
 
 .nameStyle {
-  @include carbon--type-style('body-short-01', true);
+  @include carbon--type-style('heading-01', true);
   color: $carbon--black-100;
   padding-left: $spacing-05;
   padding-top: $spacing-05;
