--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -213,6 +213,7 @@
 .component-index-filter__label {
   border-top: 1px solid $ui-03;
   padding-top: $spacing-05;
+  padding-right: $spacing-07;
   padding-bottom: $spacing-03;
   font-size: 0.75rem;
   line-height: 1.125rem;
@@ -220,7 +221,7 @@
   color: $carbon--gray-70;
   font-weight: 400;
   vertical-align: initial;
-  width: 14rem;
+  width: 100%;
 }
 
 // Filter option
