fix(component-index): 1768 & 1743 component-index-visual-bugs (#1826)
* fix(component-index): 1768 & 1743 component-index-visual-bugs

* updated spacing

* updated right padding

Co-authored-by: andrea.cardonaibm.com <andrea.cardonaibm.com>
Co-authored-by: Alison Joseph <alisonejoseph@Gmail.com>

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -18,6 +18,10 @@
   margin-top: 5rem;
 }
 
+.component-index-search .bx--search-input {
+  border-bottom: 1px solid $ui-03;
+}
+
 // Sort
 .component-index-sort-container {
   margin-bottom: $spacing-07;
@@ -189,7 +193,7 @@
 // Component Index Filter
 //----------------------------------------------------------------------------
 .component-index-filter-container {
-  margin-top: 12.5rem;
+  margin-top: 14rem;
   padding-left: $spacing-07;
 }
 
@@ -210,12 +214,13 @@
   border-top: 1px solid $ui-03;
   padding-top: $spacing-05;
   padding-bottom: $spacing-03;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
   line-height: 1.125rem;
   letter-spacing: 0.16px;
   color: $carbon--gray-70;
   font-weight: 400;
   vertical-align: initial;
+  width: 100%;
 }
 
 // Filter option
