fix(website): fix FormGroup warnings, color table bugs

--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -14,6 +14,9 @@
   [class*='filter-row'] {
     top: 9rem;
   }
+  .color-token-table .bx--sticky-container-visible {
+    top: 9rem;
+  }
 }
 
 .layout-no-banner :global {
@@ -34,11 +37,10 @@
   [class*='filter-row'] {
     top: 7rem;
   }
-  [class*='color-token-table'] {
+  .color-token-table .bx--sticky-container-visible {
     top: 7rem;
   }
-
-  .bx--sticky-container-visible {
+  .bx--typeset-style-container .bx--sticky-container-visible {
     top: 4rem;
   }
 }
