fix(component-index): fix horizontal scrolling on component index page

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -116,6 +116,7 @@
 .component-index-item__info {
   @include carbon--type-style('body-short-01');
 
+  position: relative;
   margin-top: auto;
   display: flex;
   justify-content: space-between;
@@ -137,6 +138,8 @@
 
 // Info Tags
 .component-index-item__tags {
+  position: absolute;
+  right: 8px;
   display: flex;
   align-items: center;
 }
