style(color-table): move overflow menu up 8px

--- a/src/components/ColorTokenTable/color-token-table.scss
+++ b/src/components/ColorTokenTable/color-token-table.scss
@@ -76,6 +76,7 @@
 
 .color-token-value .bx--overflow-menu {
   margin-left: $spacing-03;
+  margin-top: -$spacing-03;
 }
 
 .color-token-value .bx--overflow-menu-options {
