chore: update gatsby theme

--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -79,3 +79,12 @@
   color: $text-04;
   @include carbon--type-style('body-short-01');
 }
+
+.halloween-button {
+  color: white;
+}
+
+.halloween-button:hover {
+  background-color: #eb6200;
+  color: white;
+}
