fix: update feedback icon

--- a/src/gatsby-theme-carbon/components/FeedbackDialog/FeedbackDialog.module.scss
+++ b/src/gatsby-theme-carbon/components/FeedbackDialog/FeedbackDialog.module.scss
@@ -20,6 +20,12 @@
 
 .button svg {
   fill: $icon-03;
+  padding-top: 2px;
+  padding-bottom: 4px;
+}
+
+.button svg :global(.cls-1) {
+  fill: none;
 }
 
 .button:hover {
