fix: update halloween theme

--- a/src/components/SVGLibraries/shared/SvgLibrary.module.scss
+++ b/src/components/SVGLibraries/shared/SvgLibrary.module.scss
@@ -51,6 +51,9 @@
   top: -1rem;
   background: #f3f3f3;
 }
+:global(.halloween) .filter-row::before {
+  background: #161616;
+}
 
 .filter-row :global(.bx--search-input) {
   border-bottom: 1px solid $ui-03;
@@ -247,6 +250,10 @@ $svg-card-border: 1px solid $ui-03;
 .flex-container svg {
   fill: $icon-01;
   animation: fadeIn $duration--fast-01 motion(standard, productive);
+}
+
+:global(.halloween) .flex-container svg {
+  stroke: #161616 !important;
 }
 
 @keyframes fadeIn {
