--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -81,10 +81,21 @@
 }
 
 .halloween-button {
+  padding-right: 12px;
+}
+
+.halloween-button:hover,
+.halloween-button:focus {
+  background-color: #eb6200;
   color: white;
 }
 
-.halloween-button:hover {
-  background-color: #eb6200;
-  color: white;
+.halloween-button svg {
+  fill: #eb6200;
+  height: 1.5rem;
+}
+
+.halloween-button:hover svg,
+.halloween-button:focus svg {
+  fill: white;
 }
