fix: color token fixes

--- a/src/components/ColorTokenTable/color-token-table.scss
+++ b/src/components/ColorTokenTable/color-token-table.scss
@@ -11,7 +11,7 @@
   position: relative;
   width: 100%;
   height: 3rem;
-  background: $ui-02;
+  background: $ui-01;
 
   @include carbon--breakpoint-down('lg') {
     margin-left: 0;
@@ -30,7 +30,7 @@
   left: 0;
   width: 100%;
   height: 64px;
-  background: $ui-01;
+  background: $ui-background;
 }
 
 .color-token-table__theme-switcher--stuck {
@@ -39,7 +39,7 @@
 
 .color-token-table__theme-switcher
   .bx--content-switcher-btn:not(.bx--content-switcher--selected) {
-  background-color: $ui-02;
+  background-color: $ui-01;
   color: $text-01;
 
   &:hover {
@@ -119,7 +119,7 @@
 }
 
 .color-token-table .page-table {
-  background: $ui-02;
+  background: $ui-01;
   margin-top: $spacing-03;
   width: calc(100%);
 }
