--- a/src/components/SVGLibraries/shared/SvgLibrary.module.scss
+++ b/src/components/SVGLibraries/shared/SvgLibrary.module.scss
@@ -112,7 +112,7 @@ $svg-card-border: 1px solid $ui-03;
 .svg-card {
   height: 0;
   padding-top: 100%;
-  background-color: $ui-background;
+  background-color: $ui-01;
   position: relative;
   border-left: $svg-card-border;
   border-top: $svg-card-border;
