chore(search): change width of search demo component

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -367,4 +367,10 @@ fieldset.form-group:last-of-type {
   [class*='--content-switcher-btn'] {
     height: 2.5rem;
   }
+
+  [class*='--search--sm'],
+  [class*='--search--lg'],
+  [class*='--search--xl'] {
+    width: 50%;
+  }
 }
