fix: grid demo bg color and bleed-spacing

--- a/src/styles/_grid-demo.scss
+++ b/src/styles/_grid-demo.scss
@@ -58,7 +58,7 @@
 //---------------------------------------
 
 .grid-demo {
-  background: $ui-background;
+  background: $ui-01;
   padding: $spacing-05 0;
   display: flex;
   position: relative;
@@ -115,7 +115,6 @@
 // Full bleed
 .grid-demo--bleed {
   padding-top: $spacing-05;
-  padding-bottom: $spacing-05;
 }
 
 .grid-demo--bleed .bx-demo--grid {
@@ -186,7 +185,8 @@
 //---------------------------------------
 // Code snippet override (full width)
 //---------------------------------------
-.grid-demo + pre {
+.grid-demo + pre,
+.grid-demo--bleed + pre {
   --space: 0;
 }
 
