docs: update steering committee info

--- a/src/styles/Layout.module.scss
+++ b/src/styles/Layout.module.scss
@@ -23,3 +23,35 @@
     top: 4rem;
   }
 }
+
+// Principles/Layout page
+.divided-section [class*='#{$prefix}--col'] {
+  margin-bottom: 1.5rem;
+  @include carbon--breakpoint('md') {
+    margin-bottom: 0;
+  }
+}
+
+.divided-section {
+  --space: 24px;
+  padding-top: 2rem;
+}
+
+.divided-section:before {
+  content: '';
+  display: block;
+  background: $ui-04;
+  height: 1px;
+  width: calc(100% - 2rem);
+  margin: 0rem 1rem 1.5rem 1rem;
+}
+
+.divided-section h2,
+.divided-section h3,
+.divided-section h4 {
+  margin-top: 0;
+}
+
+.divided-section p {
+  padding-right: 3rem !important;
+}
