update(component-index): added on hover

--- a/src/components/ComponentIndexPage/component-index.scss
+++ b/src/components/ComponentIndexPage/component-index.scss
@@ -39,6 +39,9 @@
   background-color: $white-0;
   padding-left: 0.5rem;
   height: 2.5rem;
+  &:hover {
+    background-color: $hover-ui;
+  }
 }
 
 //----------------------------------------------------------------------------
