fix(ComponentDemo): override universal selector

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -292,6 +292,10 @@ fieldset.form-group:last-of-type {
   align-items: center;
 }
 
+.preview-container :global .bx--snippet {
+  justify-content: normal;
+}
+
 .editor-container {
   margin-top: 0;
   font-size: 14px;
