fix(overlay): remove overlay on mobile

--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -81,3 +81,7 @@
 .resource-card-group .bx--col-lg-4:nth-child(even) .bx--resource-card--dark {
   border-left-color: #000;
 }
+
+.bx--side-nav__overlay-active {
+  width: 100%;
+}
