fix: chart types overview card group spacing

--- a/src/components/OverviewCard/overview-card-group.scss
+++ b/src/components/OverviewCard/overview-card-group.scss
@@ -4,6 +4,10 @@
   }
 }
 
+.overview-card-group .#{$prefix}--no-gutter-sm {
+  --space: 0;
+}
+
 .overview-card-group .overview-card {
   @include carbon--breakpoint('lg') {
     border-left: 1px solid $carbon--gray-20;
