fix(ComponentDemo): update table zebra stripe styles

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -362,10 +362,16 @@ fieldset.form-group:last-of-type {
     color: var(--cds-text-01, #161616);
   }
 
+  [class*='--data-table--zebra'] tbody tr:nth-child(even) td {
+    background-color: var(--cds-ui-03, #e0e0e0);
+    border-bottom: var(--cds-ui-03, #e0e0e0);
+    border-top: var(--cds-ui-03, #e0e0e0);
+  }
+
   [class*='--data-table--zebra'] tbody tr:nth-child(odd) td {
-    background-color: var(--cds-ui-02, #fffff);
-    border-bottom: var(--cds-ui-02, #fffff);
-    border-top: var(--cds-ui-02, #fffff);
+    background-color: var(--cds-ui-01, #f4f4f4);
+    border-bottom: var(--cds-ui-01, #f4f4f4);
+    border-top: var(--cds-ui-01, #f4f4f4);
   }
 
   [class*='--content-switcher-btn'] {
