fix(ComponentDemo): update sortable table hover styles

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -384,4 +384,8 @@ fieldset.form-group:last-of-type {
   .bx--select {
     width: 50%;
   }
+
+  [class*='--table-sort']:hover {
+    background-color: var(--cds-layer-selected-hover, #cacaca);
+  }
 }
