--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -309,6 +309,7 @@ fieldset.form-group:last-of-type {
 }
 
 // Themes
+body[data-live-preview-theme='White'] [class^='bx--tooltip'],
 .white {
   @include carbon--theme(
     $theme: $carbon--theme--white,
@@ -316,6 +317,7 @@ fieldset.form-group:last-of-type {
   );
 }
 
+body[data-live-preview-theme='Gray 10'] [class^='bx--tooltip'],
 .g10 {
   @include carbon--theme(
     $theme: $carbon--theme--g10,
@@ -323,6 +325,7 @@ fieldset.form-group:last-of-type {
   );
 }
 
+body[data-live-preview-theme='Gray 90'] [class^='bx--tooltip'],
 .g90 {
   @include carbon--theme(
     $theme: $carbon--theme--g90,
@@ -330,6 +333,7 @@ fieldset.form-group:last-of-type {
   );
 }
 
+body[data-live-preview-theme='Gray 100'] [class^='bx--tooltip'],
 .g100 {
   @include carbon--theme(
     $theme: $carbon--theme--g100,
@@ -387,5 +391,11 @@ fieldset.form-group:last-of-type {
 
   [class*='--table-sort']:hover {
     background-color: var(--cds-layer-selected-hover, #cacaca);
+  }
+}
+
+body {
+  [class$='--tooltip'] {
+    background-color: var(--cds-inverse-02, #393939);
   }
 }
