fix(ComponentDemo): update themed date picker styles

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -310,6 +310,8 @@ fieldset.form-group:last-of-type {
 
 // Themes
 body[data-live-preview-theme='White'] [class^='bx--tooltip'],
+body[data-live-preview-theme='White']
+  [class^='flatpickr-calendar'][class*='open'],
 .white {
   @include carbon--theme(
     $theme: $carbon--theme--white,
@@ -318,6 +320,8 @@ body[data-live-preview-theme='White'] [class^='bx--tooltip'],
 }
 
 body[data-live-preview-theme='Gray 10'] [class^='bx--tooltip'],
+body[data-live-preview-theme='Gray 10']
+  [class^='flatpickr-calendar'][class*='open'],
 .g10 {
   @include carbon--theme(
     $theme: $carbon--theme--g10,
@@ -326,6 +330,8 @@ body[data-live-preview-theme='Gray 10'] [class^='bx--tooltip'],
 }
 
 body[data-live-preview-theme='Gray 90'] [class^='bx--tooltip'],
+body[data-live-preview-theme='Gray 90']
+  [class^='flatpickr-calendar'][class*='open'],
 .g90 {
   @include carbon--theme(
     $theme: $carbon--theme--g90,
@@ -334,6 +340,8 @@ body[data-live-preview-theme='Gray 90'] [class^='bx--tooltip'],
 }
 
 body[data-live-preview-theme='Gray 100'] [class^='bx--tooltip'],
+body[data-live-preview-theme='Gray 100']
+  [class^='flatpickr-calendar'][class*='open'],
 .g100 {
   @include carbon--theme(
     $theme: $carbon--theme--g100,
@@ -397,5 +405,9 @@ body[data-live-preview-theme='Gray 100'] [class^='bx--tooltip'],
 body {
   [class$='--tooltip'] {
     background-color: var(--cds-inverse-02, #393939);
+  }
+
+  .flatpickr-calendar.open {
+    background-color: var(--cds-ui-01, #ffffff);
   }
 }
