fix(component-demo): update to emit component tokens

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -1,3 +1,7 @@
+@import '~carbon-components/scss/globals/scss/component-tokens';
+@import '~carbon-components/scss/components/notification/tokens';
+@import '~carbon-components/scss/components/tag/tokens';
+
 .fullscreen {
   @include carbon--breakpoint('md') {
     position: fixed;
@@ -313,28 +317,40 @@ fieldset.form-group:last-of-type {
   @include carbon--theme(
     $theme: $carbon--theme--white,
     $emit-custom-properties: true
-  );
+  ) {
+    @include emit-component-tokens($tag-colors);
+    @include emit-component-tokens($notification-colors);
+  }
 }
 
 .g10 {
   @include carbon--theme(
     $theme: $carbon--theme--g10,
     $emit-custom-properties: true
-  );
+  ) {
+    @include emit-component-tokens($tag-colors);
+    @include emit-component-tokens($notification-colors);
+  }
 }
 
 .g90 {
   @include carbon--theme(
     $theme: $carbon--theme--g90,
     $emit-custom-properties: true
-  );
+  ) {
+    @include emit-component-tokens($tag-colors);
+    @include emit-component-tokens($notification-colors);
+  }
 }
 
 .g100 {
   @include carbon--theme(
     $theme: $carbon--theme--g100,
     $emit-custom-properties: true
-  );
+  ) {
+    @include emit-component-tokens($tag-colors);
+    @include emit-component-tokens($notification-colors);
+  }
 }
 
 //---------------------------------------
