--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -410,6 +410,10 @@ body[data-live-preview-theme='Gray 100'] ul[class^='bx--overflow-menu-options'],
     height: 100%;
   }
 
+  [class*='--loading-overlay'] {
+    position: static;
+  }
+
   [class*='--overflow-menu__icon'] {
     fill: var(--cds-icon-01, #161616);
   }
