fix tooltip style override issues in charting demos

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -439,7 +439,7 @@ body[data-live-preview-theme='Gray 100'] ul[class^='bx--overflow-menu-options'],
 }
 
 body {
-  [class$='--tooltip'] {
+  [class$='bx--tooltip'] {
     background-color: var(--cds-inverse-02, #393939);
   }
 
