--- a/src/components/ListSection/ListSection.module.scss
+++ b/src/components/ListSection/ListSection.module.scss
@@ -6,7 +6,7 @@
   padding-top: 2rem;
 }
 
-.list-section:before {
+.list-section::before {
   content: '';
   display: block;
   background: $ui-04;
