fix(componeent-demo): updated label title

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -478,7 +478,7 @@ body {
   }
 }
 
-:global(.hidden-editor-label) {
+:global(.live-editor-label) {
   position: absolute;
   overflow: hidden;
   width: 1px;
