feat: add other attention yaml entries

--- a/src/components/StatusIndicatorTable/StatusIndicator.module.scss
+++ b/src/components/StatusIndicatorTable/StatusIndicator.module.scss
@@ -68,6 +68,10 @@
   border-bottom: 1px solid #dcdcdc;
 }
 
+.statusIndicatorRow:last-child {
+  border-bottom: none;
+}
+
 @media (max-width: 600px) {
   .statusIndicatorTableWrapper {
     margin-right: -1rem;
