fix: color palette switcher border

--- a/src/components/ColorPalette/ColorPalette.module.scss
+++ b/src/components/ColorPalette/ColorPalette.module.scss
@@ -15,7 +15,6 @@
   column-gap: 1px;
   row-gap: 1px;
   width: 66.66%;
-  border-bottom: 1px solid transparent;
 
   @include carbon--breakpoint-down('md') {
     width: 100%;
@@ -24,6 +23,10 @@
   @include carbon--breakpoint-down('sm') {
     grid-template-columns: 1fr;
   }
+}
+
+.palette-controls button {
+  border: none !important;
 }
 
 .group-controls {
@@ -49,6 +52,7 @@
 //SWITCHER
 .palette-switcher {
   height: 3rem;
+  border-bottom: 1px solid $ui-03;
 }
 
 .palette-switcher :global(.bx--content-switcher-btn) {
