fix(Typography): fix issues with inline copy button

--- a/src/components/TypesetStyle/typeset-example.scss
+++ b/src/components/TypesetStyle/typeset-example.scss
@@ -1,3 +1,5 @@
+@import '~carbon-components/scss/components/copy-button/copy-button';
+
 .bx--typeset-example-container {
   margin-top: $spacing-05;
 }
