fix(CodeSnippet): use token for copy button

--- a/src/components/TypesetStyle/typeset-example.scss
+++ b/src/components/TypesetStyle/typeset-example.scss
@@ -1,5 +1,9 @@
 @import '~carbon-components/scss/components/copy-button/copy-button';
 
+.bx--copy-btn {
+  background-color: var(--cds-layer);
+}
+
 .bx--typeset-example-container {
   margin-top: $spacing-05;
 }
