fix(CodeSnippet): set correct hover color

--- a/src/components/TypesetStyle/typeset-example.scss
+++ b/src/components/TypesetStyle/typeset-example.scss
@@ -4,6 +4,10 @@
   background-color: var(--cds-layer);
 }
 
+.bx--copy-btn:hover {
+  background-color: var(--cds-layer-hover);
+}
+
 .bx--typeset-example-container {
   margin-top: $spacing-05;
 }
