demo link list only scrollable if there's overflow

--- a/src/components/ComponentDemo/Code/Code.module.scss
+++ b/src/components/ComponentDemo/Code/Code.module.scss
@@ -46,7 +46,7 @@
 
 .link-list {
   display: flex;
-  overflow-x: scroll;
+  overflow-x: auto;
   @include carbon--breakpoint('md') {
     overflow-x: visible;
   }
