update color-scheme for code bar component

--- a/src/components/ComponentDemo/Code/Code.module.scss
+++ b/src/components/ComponentDemo/Code/Code.module.scss
@@ -42,6 +42,7 @@
   padding-left: $spacing-05;
   padding-right: $spacing-03;
   border-bottom: 1px solid $inverse-02;
+  color-scheme: dark;
 }
 
 .link-list {
