--- a/src/components/ComponentDemo/Code/Code.module.scss
+++ b/src/components/ComponentDemo/Code/Code.module.scss
@@ -15,6 +15,7 @@
   overflow-y: auto;
   width: 100%;
   background-color: $ui-05;
+  color-scheme: dark;
 }
 
 // feedback tooltip adjustments
@@ -42,6 +43,7 @@
   padding-left: $spacing-05;
   padding-right: $spacing-03;
   border-bottom: 1px solid $inverse-02;
+  color-scheme: dark;
 }
 
 .link-list {
