fix(color): fix v10 color page bugs

--- a/src/components/ColorBlock/color-block.scss
+++ b/src/components/ColorBlock/color-block.scss
@@ -18,7 +18,7 @@
     height: rem(14px);
     width: rem(14px);
     border-radius: rem(14px);
-    border: 1px solid $ui-03;
+    border: 1px solid $gray-30;
     left: -1px;
     top: -1px;
   }
@@ -33,7 +33,16 @@
 // Color blocks
 
 .color-blocks .bx--caption {
+  font-size: 14px;
   margin-left: $spacing-05;
+}
+
+.color-blocks .bx--col-lg-2:nth-child(1) {
+  min-width: 50%;
+
+  @include carbon--breakpoint('md') {
+    margin-right: 0px;
+  }
 }
 
 .color-blocks .bx--col-lg-2 {
@@ -42,17 +51,23 @@
 }
 
 .color-blocks .bx--col-lg-2:nth-child(2) {
-  margin-right: 40%;
+  min-width: 50%;
 
   @include carbon--breakpoint('md') {
-    margin-right: 0;
+    margin-right: 0px;
   }
 }
 
 .color-blocks .bx--col-lg-2:nth-child(3) {
+  min-width: 50%;
+
   @include carbon--breakpoint('md') {
     margin-left: $spacing-07;
   }
+}
+
+.color-blocks .bx--col-lg-2:nth-child(4) {
+  min-width: 50%;
 }
 
 .color-square {
