fix(color): fix v10 color page bugs v2

--- a/src/components/ColorBlock/color-block.scss
+++ b/src/components/ColorBlock/color-block.scss
@@ -37,17 +37,17 @@
   margin-left: $spacing-05;
 }
 
+.color-blocks .bx--col-lg-2 {
+  padding-right: 0;
+  padding-left: 0;
+}
+
 .color-blocks .bx--col-lg-2:nth-child(1) {
   min-width: 50%;
 
   @include carbon--breakpoint('md') {
-    margin-right: 0px;
+    min-width: 16%;
   }
-}
-
-.color-blocks .bx--col-lg-2 {
-  padding-right: 0;
-  padding-left: 0;
 }
 
 .color-blocks .bx--col-lg-2:nth-child(2) {
@@ -55,6 +55,7 @@
 
   @include carbon--breakpoint('md') {
     margin-right: 0px;
+    min-width: 16%;
   }
 }
 
@@ -63,11 +64,17 @@
 
   @include carbon--breakpoint('md') {
     margin-left: $spacing-07;
+    min-width: 16%;
   }
 }
 
 .color-blocks .bx--col-lg-2:nth-child(4) {
   min-width: 50%;
+
+  @include carbon--breakpoint('md') {
+    margin-right: 0px;
+    min-width: 16%;
+  }
 }
 
 .color-square {
