--- a/src/components/ColorBlock/color-block.scss
+++ b/src/components/ColorBlock/color-block.scss
@@ -18,7 +18,7 @@
     height: rem(14px);
     width: rem(14px);
     border-radius: rem(14px);
-    border: 1px solid $ui-03;
+    border: 1px solid $gray-30;
     left: -1px;
     top: -1px;
   }
@@ -33,6 +33,7 @@
 // Color blocks
 
 .color-blocks .bx--caption {
+  font-size: 14px;
   margin-left: $spacing-05;
 }
 
@@ -41,17 +42,38 @@
   padding-left: 0;
 }
 
-.color-blocks .bx--col-lg-2:nth-child(2) {
-  margin-right: 40%;
+.color-blocks .bx--col-lg-2:nth-child(1) {
+  min-width: 50%;
 
   @include carbon--breakpoint('md') {
-    margin-right: 0;
+    min-width: 16%;
+  }
+}
+
+.color-blocks .bx--col-lg-2:nth-child(2) {
+  min-width: 50%;
+
+  @include carbon--breakpoint('md') {
+    margin-right: 0px;
+    min-width: 16%;
   }
 }
 
 .color-blocks .bx--col-lg-2:nth-child(3) {
+  min-width: 50%;
+
   @include carbon--breakpoint('md') {
     margin-left: $spacing-07;
+    min-width: 16%;
+  }
+}
+
+.color-blocks .bx--col-lg-2:nth-child(4) {
+  min-width: 50%;
+
+  @include carbon--breakpoint('md') {
+    margin-right: 0px;
+    min-width: 16%;
   }
 }
 
