fix(ClickableTile): fix padding issue

--- a/src/components/ComponentDemo/ComponentDemo.module.scss
+++ b/src/components/ComponentDemo/ComponentDemo.module.scss
@@ -378,6 +378,11 @@ body[data-live-preview-theme='Gray 100'] ul[class^='bx--overflow-menu-options'],
     z-index: 99999;
   }
 
+  // ClickableTile padding issue
+  [class*='--tile--clickable'] {
+    padding: 1rem;
+  }
+
   // Checkbox uses body text
   // https://github.com/carbon-design-system/carbon/issues/4545
   [class*='--checkbox-label'],
