--- a/src/components/HomepageVideo/homepage-video.scss
+++ b/src/components/HomepageVideo/homepage-video.scss
@@ -51,6 +51,7 @@
   outline: none;
   border: none;
   padding: 0;
+  cursor: pointer;
   z-index: 10; //need this to be above dots overlay
 
   @include carbon--breakpoint('lg') {
